Fix: WooCommerce gallery images not showing on the frontend, #691

--- a/assets/less/admin.less
+++ b/assets/less/admin.less
@@ -831,6 +831,10 @@ ul.wpuf-form{
     display: none;
 }
 
+.wpuf-xmp-tag{
+    display: inline;
+}
+
 @import "help.less";
 @import "whats-new.less";
 @import "metabox-tabs.less";
